no longer need js. use visibility: hidden and position:abosulte

--- a/static/less/stolen.less
+++ b/static/less/stolen.less
@@ -39,9 +39,18 @@ h2 {
       background: @orange;
       opacity: .94;
     }
-    img {
-      display: none;
+    .preview-image {
+      visibility: hidden;
     }
+    .preview-text {
+      color: white;
+      text-align: center;
+      position: absolute;
+      width: @columnWidth;
+    }
+  }
+  .social {
+    position: absolute;
   }
 }
 
